typo from Jon Lang++ clarify innards of () and [] slightly
git-svn-id: http://svn.pugscode.org/pugs@23988 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -1489,7 +1489,7 @@ object with parens after it (which may, of course, contain arguments):
 
     &foo($arg1, $arg2);
 
-Whitespace is not allowed before the parens because it it is parsed as
+Whitespace is not allowed before the parens because it is parsed as
 a postfix.  As with any postfix, there is also a corresponding C<.()>
 operator, and you may use the "unspace" form to insert optional
 whitespace and comments between the backslash and either of the
