[elf_c] Started adding use().  Refactoring towards runtime-swappable compilers. ../elf_c -x -o ../elf_c1 ElfC.pm  now works. elf_c can no longer be compiled by elf_b, only by itself.
git-svn-id: http://svn.pugscode.org/pugs@20209 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/elf_c_src/README
+++ b/misc/elf/elf_c_src/README
@@ -1,8 +1,9 @@
 
-2008-Apr-01 00:18
+2008-Apr-02 13:53
 Bootstrap check:
 
-../elf_b -x -o ../elf_c Match.pm IR0_Nodes.pm IR0_FromAST.pm IR0_FromAST_handlers.pm EmitSimpleP5_fromIR0.pm ElfC_CommandLine.pm
-../elf_c -x -o ../elf_c1 Match.pm IR0_Nodes.pm IR0_FromAST.pm IR0_FromAST_handlers.pm EmitSimpleP5_fromIR0.pm ElfC_CommandLine.pm
-../elf_c1 -x -o ../elf_c2 Match.pm IR0_Nodes.pm IR0_FromAST.pm IR0_FromAST_handlers.pm EmitSimpleP5_fromIR0.pm ElfC_CommandLine.pm
-diff ../elf_c[12]
+../elf_c -x -o ../elf_c1 ElfC.pm
+../elf_c1 -x -o ../elf_c2 ElfC.pm
+../elf_c2 -x -o ../elf_c3 ElfC.pm
+diff ../elf_c[23]
+../elf_c2 -e 'say 3'
