--- a/misc/elf/README
+++ b/misc/elf/README
@@ -33,7 +33,7 @@ Purpose:
 Comparison: Like elf_b, but written in elf_b p6, not elf_a p6 (basically +has).
 Written in: elf_b dialect.
 Emits: Currently same as elf_b, but that may change.
-Can be compiled by: elf_c, elf_b.
+Can be compiled by: elf_c only.
 Linkages:
   ast_handlers and ir_nodes are copies of those in std_b.
   They can't be regenerated, but only recopied by hand.
