--- a/misc/elf/elf_d_src/README
+++ b/misc/elf/elf_d_src/README
@@ -1,4 +1,11 @@
 
+../elf_c -x -o ../elf_d ElfD.pm
+../elf_d -x -o ../elf_d1 ElfD.pm
+../elf_d1 -x -o ../elf_d2 ElfD.pm
+diff ../elf_d[12]
+../elf_d2 -e 'say 3'
+
+Obsolete:
 ../elf_c -x -I ../elf_c_src -o ../elf_d ElfD.pm
 ../elf_d -x -I ../elf_c_src -o ../elf_d1 ElfD.pm
 ../elf_d1 -x -I ../elf_c_src -o ../elf_d2 ElfD.pm
