mentioned in the README a way to run a couple of tests
git-svn-id: http://svn.pugscode.org/pugs@20241 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/README
+++ b/misc/elf/README
@@ -1,3 +1,9 @@
+Running tests
+
+  You can run a couple of tests with
+    prove --exec 'perl elf_d' - < TESTS
+  If you find that any other tests run please put them into TESTS.
+
 A development story (a tale of two compilers)
 
   Say someone hands you a working perl6.
