[elf_e] Further clean up r20255/r20256.  Now IRx1_Analysis is actually run.
git-svn-id: http://svn.pugscode.org/pugs@20258 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/elf_e_src/README
+++ b/misc/elf/elf_e_src/README
@@ -1,6 +1,6 @@
 
-../elf_d -x -I ../elf_d_src -o ../elf_e ElfE.pm
-../elf_e -x -I ../elf_d_src -o ../elf_e1 ElfE.pm
-../elf_e1 -x -I ../elf_d_src -o ../elf_e2 ElfE.pm
+../elf_d -x -I ../elf_d_src -I . -o ../elf_e ElfE.pm
+../elf_e -x -I ../elf_d_src -I . -o ../elf_e1 ElfE.pm
+../elf_e1 -x -I ../elf_d_src -I . -o ../elf_e2 ElfE.pm
 diff ../elf_e[12]
 ../elf_e2 -e 'say 3'
