--- a/misc/elf/elf_d_src/README
+++ b/misc/elf/elf_d_src/README
@@ -6,6 +6,15 @@ cp ../elf_d ../elf_d1
 diff ../elf_d[12]
 ../elf_d2 -e 'say 3'
 
+NoMoose_smaller:
+
+../elf_d -x -o ../elf_dm0 ElfD_NoMoose_smaller.pm
+../elf_dm0 -x -o ../elf_dm ElfD_NoMoose_smaller.pm
+cp ../elf_dm ../elf_dm1
+../elf_dm1 -x -o ../elf_dm2 ElfD_NoMoose_smaller.pm
+diff ../elf_dm[12]
+../elf_dm2 -e 'say 3'
+
 NoMoose:
 
 ../elf_c -x -o ../elf_dm0 ElfD_NoMoose.pm
