--- a/misc/elf/elf_d_src/README
+++ b/misc/elf/elf_d_src/README
@@ -8,13 +8,13 @@ diff ../elf_d[12]
 
 NoMoose:
 
-../elf_c -x -o ../elf_dm0 ElfD_NoMoose.pm
+../elf_d -x -o ../elf_dm0 ElfD_NoMoose.pm
 ../elf_dm0 -x -o ../elf_dm ElfD_NoMoose.pm
 cp ../elf_dm ../elf_dm1
 ../elf_dm1 -x -o ../elf_dm2 ElfD_NoMoose.pm
 diff ../elf_dm[12]
 ../elf_dm2 -e 'say 3'
-
+cp ../elf_dm ../elf_d_nomoose
 
 Obsolete:
 ../elf_c -x -I ../elf_c_src -o ../elf_d ElfD.pm
